Added repository reference

--- a/auth/package.json
+++ b/auth/package.json
@@ -9,6 +9,10 @@
     "authorization",
     "role"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/major-mann/graphql-directive.git"
+  },
   "author": "Calvin Mann <calvinmann+npm@gmail.com>",
   "license": "MIT"
 }
